--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
